0.9622 2022-07-13
  [Changes]
    * The file name "t/basic.t" that is generated by spvmdist command is renamed to "t/use_spvm_class.t".
    * The .gitignore file that is generated by spvmdist command is changed to the following.
      [Before]
      blib/*
      Makefile
      Makefile.old
      MYMETA.yml
      MYMETA.json
      pm_to_blib
      .spvm_build
      t/.spvm_build
      core.*
      core
      SPVM-*
      *.bak
      *.BAK
      *.tmp
      
      [After]
      blib/*
      Makefile
      Makefile.old
      MYMETA.yml
      MYMETA.json
      pm_to_blib
      .spvm_build
      t/.spvm_build
      core.*
      core
      SPVM-*
      *.bak
      *.BAK
      *.tmp
      *.o
      *.bs
    * spvmdist checks the class name is specified and doesn't contains "-".
  [Document Bug Fix]
    * Remove the description that "Module can contain multiple Classes". This is wrong.
0.9621 2022-07-13
  [New Features]
    * Add SPVM::Builder::LinkInfo create_link_command instance method.
    * Add SPVM::Builder::LinkInfo output_type field method.
    * Add SPVM::Builder::LinkInfo ld_optimize field method.
    * Add SPVM::Builder::LinkInfo dynamic_lib_ldflags field method.
    * Add SPVM::Builder::LinkInfo create_merged_ldflags method.
    * Add SPVM::Builder::CompileInfo class.
    * Add compile_info to SPVM::Builder::ObjectFileInfo.
    * Add before_compile to SPVM::Builder::Config.
    * Add global_before_compile to SPVM::Builder::Config::Exe.
  [Changes]
    * Improve MANIFES.SKIP that is generated by spvmdit.
      [Before]
      ^blib/
      ^Makefile\$
      ^Makefile\.old\$
      ^MYMETA.yml\$
      ^MYMETA.json\$
      ^pm_to_blib\$
      ^\.spvm_build/
      ^t/\.spvm_build/
      ^SPVM-
      ^core\.
      ^core\$
      \.bak\$
      \.tmp\$
      \.BAK\$
      ^\.git/
      
      [After]
      (^|\/)blib/
      (^|\/)Makefile$
      (^|\/)Makefile.old$
      (^|\/)MYMETA.yml$
      (^|\/)MYMETA.json$
      (^|\/)pm_to_blib$
      (^|\/).spvm_build/