@@ -284,6 +284,9 @@ SPVM_ENV* SPVM_API_new_env_raw() {
     SPVM_API_new_stack,
     SPVM_API_free_stack,
     SPVM_API_get_instance_method_id_super,
+    SPVM_API_new_memory_env,
+    SPVM_API_free_memory_env,
+    SPVM_API_get_memory_blocks_count_env,
   };
   
   SPVM_ENV* env = calloc(1, sizeof(env_init));
