@@ -1,4 +1,10 @@
 0.9622 2022-07-13
+  [New Features]
+    * Add the following native APIs.
+      void* (*new_memory_env)(SPVM_ENV* env, size_t byte_size);
+      void (*free_memory_env)(SPVM_ENV* env, void* block);
+      int32_t (*get_memory_blocks_count_env)(SPVM_ENV* env);
+    
   [Changes]
     * The file name "t/basic.t" that is generated by spvmdist command is renamed to "t/use_spvm_class.t".
     * The .gitignore file that is generated by spvmdist command is changed to the following.
@@ -37,7 +43,8 @@
       *.bs
     * spvmdist checks the class name is specified and doesn't contains "-".
   [Document Bug Fix]
-    * Remove the description that "Module can contain multiple Classes". This is wrong.
+    * Remove the description that "Module can contain multiple Classes". This was wrong.
+    * The type of second argument of native API alloc_memory_block_zero is size_t. int64_t was wrong.
 0.9621 2022-07-13
   [New Features]
     * Add SPVM::Builder::LinkInfo create_link_command instance method.
